# smolmoe-upcycling

./: .gitignore  README.md  checkpoints.py  pyproject.toml  requirements.txt
experiments/: demo_entropy_scores.py  run_continued_pretraining.py  run_continued_pretraining_entropy_selection.py  run_continued_pretraining_entropy_selection.py.py  run_sanity_generation.py  run_upcycling_demo.py
scr/moe_llm/: config.py  data.py  generation.py  models.py  moe_metrics.py  training.py  upcycling.py  utils.py
src/moe_llm/: __init__.py  config.py  data_selection.py  losses.py  metrics.py  models.py
src/smolmoe_upcycling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_expert_load_balance.py  test_upcycling_equivalence.py
