[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolmoe-upcycling"
version = "0.1.0"
description = "SmolMoE: dense-to-MoE upcycling and continued pretraining"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "huggingface_hub",
  "matplotlib",
  "accelerate",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
